--- a/m3s04/src/main/resources/application.yml
+++ b/m3s04/src/main/resources/application.yml
@@ -1,10 +1,14 @@
 spring:
   datasource:
-    url: ${DB_URL:jdbc:postgresql://localhost:5432/books}
+    url: jdbc:postgresql://localhost:5432/books
     username: ${DB_USERNAME:postgres}
     password: ${DB_PASSWORD}
 
 jpa:
+  properties:
+    hibernate:
+      format_sql: true
+      dialect: org.hibernate.dialect.PostgreSQLDialect
   hibernate:
-    ddl-auto: update
+    ddl-auto: create-drop
 
