--- a/m3s04/src/main/resources/application.yml
+++ b/m3s04/src/main/resources/application.yml
@@ -1,14 +1,13 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/books
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/books}
     username: ${DB_USERNAME:postgres}
     password: ${DB_PASSWORD}
-
-jpa:
-  properties:
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
     hibernate:
-      format_sql: true
-      dialect: org.hibernate.dialect.PostgreSQLDialect
-  hibernate:
-    ddl-auto: create-drop
+     ddl-auto: create-drop
 
